--- a/main.html
+++ b/main.html
@@ -171,6 +171,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="common part5">
+                    <h1>Contact.</h1>
+                    <div class="bold"></div>
+                    <p class="paragraph">Do you want us to style your home? Fill out the form and fill me in with the details :) We love meeting new people!</p>
+                    <div class="form">
+                        <label for="name">Name</label>
+                        <input type="text" class="name">
+                        <label for="email">Email</label>
+                        <input type="text" class="email">
+                        <label for="message">Message</label>
+                        <input type="text" class="message">
+                    </div>
+                    <button type="submit" class="contact__btn">Send Message</button>
+                </div>
+                <footer>
+                    <div class="license">
+                        <p>Powered by</p>
+                        <a href=""> w3.css</a>
+                    </div>
+                </footer>
             </div>
         </div>
     </body>
